--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,3 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+input[type="text"]:active {
+  outline: 0;
+}
+
+input[type="text"]:focus-visible {
+  outline: 0;
+}
